# tivars_lib_cpp

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CMakeLists.txt  FILE82P.8xp  LICENSE  Makefile  Makefile.emscripten  README.emscripten.md  README.md  TIVarsLib.js  TIVarsLib.wasm  check_ce_token_mappings.py  check_evo_token_mappings.py  cli.cpp  emscripten.bc  emscripten.cpp  index.html  programs_tokens.csv  run-fuzz.sh  tests.cpp  ti-toolkit-8x-tokens.xml  tivars_lib.js  tivars_lib.wasm  tivars_test.js  tivars_test.wasm  tivars_test_utils.js
.github/workflows/: build.yml
assets/testData/: ComplexList.8xl  Equation_Y1.8xy  Equation_Y1T.8xy  Exact_ComplexRadical.8xn  Exact_RealFrac.8xn  Exact_RealPiFrac.8xn  Exact_RealRadical.8xn  ProtectedProgram.8xp  RealList.8xl  String.8xs  TableRange.8xt  Window.8xw
cli/: cli.cpp
evo-doc/: 8ca2-background-image.md  8ci2-picture.md  8xd2-gdb.md  8xl2-list.md  8xm2-matrix.md  8xn2-number.md  8xp2-program.md  8xt2-table-setup.md  8xv2-appvar.md  8xw2-window.md  8xy2-equation.md  8xz2-rclwindw.md  common-container.md  evo-version-flags.md  python-transfer-notes.md
fuzz/: tivars_file_fuzzer.cpp
quicklook/: App-Info.plist.in  AppDelegate.h  AppDelegate.m  ExtensionMain.m  Preview-Info.plist.in  PreviewProvider.h  PreviewProvider.mm  TIVarsQuickLookSupport.h  TIVarsQuickLookSupport.mm  Thumbnail-Info.plist.in  ThumbnailProvider.h  ThumbnailProvider.mm  main.m
schemas/: backup.schema.json  cabrijr-appvar.schema.json  cellsheet-appvar.schema.json  cellsheet-state-appvar.schema.json  flash.schema.json  gdb.schema.json  group.schema.json  image.schema.json  notefolio-appvar.schema.json  picture.schema.json  python-appvar.schema.json  python-image-appvar.schema.json  python-module-appvar.schema.json  recall-window.schema.json  studycards-appvar.schema.json  studycards-setgs-appvar.schema.json  table-range.schema.json  window-settings.schema.json
scripts/: amalgamate.py  amalgamated_smoke_tests.sh  api_smoke_tests.sh  cli_smoke_tests.sh  im8c_to_bmp.py  merge_fr_tokens.py  run_wasm_tests.mjs  wasm_tests.sh  wasm_tests_main.cpp
src/: BinaryFile.cpp  BinaryFile.h  CommonTypes.h  EvoFormat.cpp  EvoFormat.h  EvoTokens.inc  EvoTypes.h  TIFlashFile.cpp  TIFlashFile.h  TIModel.cpp  TIModel.h  TIModels.cpp  TIModels.h  TIVarFile.cpp  TIVarFile.h  TIVarType.cpp  TIVarType.h  TIVarTypes.cpp  TIVarTypes.h  autoloader.h  main_emscripten.cpp  tivarslib_utils.cpp  tivarslib_utils.h  utils.cpp  utils.h
src/TypeHandlers/: BuiltinTokensXml.c  DummyHandler.cpp  DummyHandler.h  ITIVarTypeHandler.h  STH_DataAppVar.cpp  STH_ExactFraction.cpp  STH_ExactFractionPi.cpp  STH_ExactPi.cpp  STH_ExactRadical.cpp  STH_FP.cpp  STH_PythonAppVar.cpp  TH_0x00.cpp  TH_0x00.h  TH_0x01.cpp  TH_0x02.cpp  TH_0x03.h  TH_0x04.h  TH_0x05.cpp  TH_0x05.h  TH_0x06.cpp  TH_0x0C.cpp  TH_0x0D.cpp  TH_0x15.cpp  TH_0x1B.cpp  TH_0x1C.cpp  TH_0x1D.cpp  TH_0x1E.cpp  TH_0x1F.cpp  TH_0x20.cpp  TH_0x21.bc  TH_0x21.cpp  TH_AppVar.cpp  TH_Backup.cpp  TH_ComplexList.cpp  TH_GDB.cpp  TH_GenericAppVar.cpp  TH_GenericComplex.cpp  TH_GenericList.cpp  TH_GenericReal.cpp  TH_Group.cpp  (+12 more)
testData/: ALLTOKS.8Xp  ARTIFI82.8cg  AppVar.8xv  BartSimpson.8xi  Complex.8xc  Equation_X1T.8xy  Equation_r1.8xy  Equation_u.8xy  Exact_ComplexFrac.8xc  Exact_ComplexPiFrac.8xc  Exact_ComplexRadical.8xc  Exact_RealPiFrac.8xc  Exact_RealRadical.8xn  GDB_Parametric.json  GIRL_150_alpha.8xv  GIRL_150_noalpha.8xv  GraphDataBase.8xd  GraphDataBase_Func.8xd  GraphDataBase_Param.8xd  Group.8xg  INCENTER_TI-83 Plus.8xv  Image1 copy.8ca  Image1.8ca  LISTABC.8xl  Matrix_2x2_exact.8xm  Matrix_3x3_standard.8xm  Pic1 copy.8ci  Pic1.8ci  Pic1.8xi  Program.8xp  ProtectedProgram_long.8xp  Real.8xn  RecallWindow.8xz  SmartPad.8ek  TESTIM8C.8xv  TI-83_Premium_CE-OS-5.8.4.0058.8pu  TI-84_Plus_CE-Python-OS-5.8.0.0022.8eu  TICSfile.8xv  TISTEMFR.8xv  WITCHES.8xv  (+5 more)
testData/evo/: A.8xl2  A.8xm2  A.8xn2  ABC.8xl2  B.8xl2  B.8xm2  B.8xn2  C.8xm2  C.8xn2  D.8xm2  D.8xn2  E.8xm2  E.8xn2  EMPTY.8xp2  EqnsCnfg.8xv2  F.8xm2  F.8xn2  G.8xn2  H.8xn2  HELLO.8xpy2  I.8xn2  Image1.8ca2  Image2.8ca2  Image3.8ca2  Image4.8ca2  Image5.8ca2  Image6.8ca2  Image7.8ca2  J.8xn2  K.8xn2  L.8xn2  L1.8xl2  L2.8xl2  L3.8xl2  L4.8xl2  L5.8xl2  L6.8xl2  M.8xn2  MIRETEXT.8xp2  N.8xn2  (+27 more)
testData/evo/img_compare/: Zelda.8ci  Zelda.8ci2  background.8ca  background.8ca2  background_ticonnectevo.8ca2
testData/evo/more/: A.8xm2  A.8xn2  B.8xn2  C.8xn2  D.8xn2  E.8xn2  F.8xn2  GDB1.8xd2  I.8xn2  L.8xn2  L1.8xl2  L2.8xl2  L3.8xl2  L4.8xl2  L5.8xl2  L6.8xl2  N.8xn2  O.8xn2  R.8xn2  S.8xn2  U.8xn2  Window.8xw2  Window_parametric.8xw2  X.8xn2  X1T.8xy2  X2T.8xy2  X3T.8xy2  X4T.8xy2  Y1T.8xy2  Y2T.8xy2  Y3T.8xy2  Y4T.8xy2
testData/evo/more/complex/: B.8xn2  C.8xn2  D.8xn2
